cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_192.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:116: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:116:9: Write of unused value
114.           }
115.           l2n(tout0, iv);
116.           l2n(tout1, iv);
               ^
117.       } else {
118.           n2l(iv, xor0);
